# Datosll-Ext-1

./: README.md
Cliente/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  socket.cpp  socket.hpp
Interfaz/: Arista.cpp  Arista.hpp  CMakeLists.txt  Nodo.hpp  NodoG.cpp  NodoG.hpp  grafo.cpp  grafo.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
Servidor/: Arista.cpp  Arista.hpp  CMakeLists.txt  Lista.hpp  Nodo.hpp  NodoG.cpp  NodoG.hpp  grafo.cpp  grafo.hpp  main.cpp
build-Cliente-Desktop-Debug/: Cliente  Cliente.cbp  Doxyfile.docs
build-Cliente-Desktop-Debug/html/: annotated.html  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.map  classMainWindow__coll__graph.md5  classSocket-members.html  classSocket.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherits.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  mainwindow_8cpp.html  mainwindow_8cpp__incl.map  mainwindow_8cpp__incl.md5  mainwindow_8hpp_source.html  socket_8cpp.html  socket_8cpp__incl.map  socket_8cpp__incl.md5  socket_8h_source.html  socket_8hpp.html  socket_8hpp__dep__incl.map  socket_8hpp__dep__incl.md5  socket_8hpp__incl.map  socket_8hpp__incl.md5  socket_8hpp_source.html
build-Interfaz-Desktop-Debug/: Interfaz  Interfaz.cbp
build-Servidor-Desktop-Debug/: CMakeDoxyfile.tpl.bak  Doxyfile.docs  Servidor  Servidor.cbp
(+131 files in other folders)
